cf-for-k8s/add-eirini-app-migration-net-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eirini-app-migration
  namespace: cf-system
spec:
  podSelector:
    matchLabels:
      name: eirini-app-migration
  egress:
  - {}
  ingress:
  - {}
  policyTypes:
  - Ingress
  - Egress
