cf-for-k8s/network-policy-fix.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cf-api-server
  namespace: cf-system
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cf-api-server
  ingress:
  - from:
    - podSelector:
        matchLabels:
          istio: ingressgateway
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/istio-system-ns: ""
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: cf-api-controllers
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          name: eirini
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          name: eirini-task-reporter
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
    - podSelector:
        matchLabels:
          app: log-cache
      namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-system-ns: ""
  egress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eirini-task-reporter
  namespace: cf-system
spec:
  podSelector:
    matchLabels:
      name: eirini-task-reporter
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eirini-instance-index-env-injector
  namespace: cf-system
spec:
  podSelector:
    matchLabels:
      name: instance-index-env-injector
  egress:
  - {}
  ingress:
  - {}
  policyTypes:
  - Ingress
  - Egress
